test/cast2.l1.out
error: cast to domain that does not define struct X1 *
               entry	(cast2.l1:12)
